Log user answers and render next

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <hr class="my-4" />
         <div id="list"></div>
       </div>
-      <div class="jumbotron" id="scorePage" style="display: block;">
+      <div class="jumbotron" id="scorePage" style="display: none;">
         <h1 class="display-4">Score</h1>
       </div>
     </div>
