--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
       </div>
       <div class="jumbotron" id="scorePage" style="display: none;">
         <h1 class="display-4">Score</h1>
+        <hr class="my-4" />
+        <p id="displayScore"></p>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Name</label>
+          <input type="Name" class="form-control" id="scoreName" />
+        </div>
       </div>
     </div>
     <script src="./script.js"></script>
