--- a/index.html
+++ b/index.html
@@ -39,10 +39,15 @@
       <div class="jumbotron" id="scorePage" style="display: none;">
         <h1 class="display-4">Score</h1>
         <hr class="my-4" />
-        <p id="displayScore"></p>
+        <p>Score: <span id="displayScore"></span></p>
         <div class="form-group">
           <label for="exampleInputPassword1">Name</label>
           <input type="Name" class="form-control" id="scoreName" />
+          <div class="text-center">
+            <button type="button" class="btn btn-dark" id="submit">Submit</button>
+            <button type="button" class="btn btn-dark" id="reset">Reset</button>
+          </div>
+      </div>
         </div>
       </div>
     </div>
